--- a/preprocessing/Preprocessing_misc.ipynb
+++ b/preprocessing/Preprocessing_misc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "049f28bc-87cc-4245-b7da-063db6e0b77b",
    "metadata": {},
    "outputs": [],
@@ -1323,9 +1323,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lstmvenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1337,7 +1337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
